# gumazoncontainer

./: .gitignore  LICENSE  README.md
._a/: makefiles
.builder/docs/: changelog.txt  metadata.txt
.builder/makefiles/: arc_version
.builder/makefiles/actionable/: feature_workflow.yaml
.builder/makefiles/include/: venv_add.sh  venv_up.sh  version_get_pyproject_toml.sh  version_set_package_json.sh  version_set_pyproject_toml.sh
api/gumazon/: gumazon.db  pyproject.toml
api/gumazon/gumazon/: __main__.py  deps.py
api/gumazon/gumazon/multiLanguageString/: model.py
api/gumazon/gumazon/posts/: router.py
api/gumazon/gumazon/translation/: model.py
api/gumazon/gumazon/users/: __init__.py
api/gumazon/tests/: test_gumazon.py
dev/gumazon/: README.md
dev/gumazon/public/gumazon/: karma.conf.js
dev/gumazon/public/gumazon/cypress/e2e/: spec.cy.ts
dev/gumazon/public/gumazon/cypress/support/: commands.ts
dev/gumazon/public/gumazon/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.module.ts
dev/gumazon/public/gumazon/src/app/authentication/: authentication-routing.module.ts
dev/gumazon/public/gumazon/src/app/authentication/profile/: profile.component.html  profile.component.ts
dev/gumazon/public/gumazon/src/app/http/: auth-http-interceptor.service.spec.ts
dev/gumazon/public/gumazon/src/environments/: environment.ts
public/gumazon/: angular.json  package.json
public/gumazon/cypress/support/: e2e.ts
public/gumazon/src/app/: app.component.ts
public/gumazon/src/app/authentication/login/: login.component.html
ui/gumazon/: README.md  package.json
ui/gumazon/src/: index.html
ui/gumazon/src/app/api/: api.service.ts
ui/gumazon/src/app/authentication/: authentication.guard.ts  authentication.module.ts  session.service.ts
ui/gumazon/src/app/authentication/login/: login.component.ts
ui/gumazon/src/app/http/: auth-http-interceptor.service.ts  http-interceptors.ts
