[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gumazon"
version = "0.1.0"
description = "Gumazon people trade center, translates and mirrors your offering into local markets in Africa, Asia, The Americas, Europe, and Australia."
readme = "README.md"
authors = [{ name = "Gumshoe Media Inc.", email = "gumshoe.media.inc@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["world", "trade", "mirror", "translate", "offer"]
dependencies = ['tomli; python_version < "3.11"']
requires-python = ">=3.9.8"

[project.optional-dependencies]
build = ["build", "twine"]
dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

[project.scripts]
gumazon = "gumazon.__main__:main"

[project.urls]
repository    = "https://github.com/gumshoe00/gumazoncontainer"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"gumazon/__init__.py" = ["{version}"]
"gumazon/__main__.py" = ["- gumazon v{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Gumazon imports"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
