[tool.poetry]
name = "gumazon"
version = "20.0.12"
description = ""
authors = ["Gumshoe Media Inc. <65322760+gumshoe00@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
